# pico_backscatter_rust

./: .gitignore
.github/: README.md
.github/workflows/: ci_checks.yml
data_pipeline/data_processing/: main.py  pyproject.toml  test_older_pipeline.ipynb  testing.ipynb
data_pipeline/data_recording/: DATA_8mhz.npy  data_recording.py  pyproject.toml
data_pipeline/packet_gen_rust/: Cargo.toml
data_pipeline/packet_gen_rust/src/: main.rs  packet.rs  pio_helpers.rs
data_processing/: .gitattributes
data_processing/.devcontainer/: devcontainer.json
notes/obsidian/: Data.md  Procedure for setting up laptop.md
notes/obsidian/.obsidian/: workspace.json
pico_probe_firmware/: README.md
pico_qpsk/: Cargo.toml  README.md  hello.py  requirements.txt  vsco_testing.ipynb
pico_qpsk/data_processing/: DATA_4mhz.npy  file_2  file_one  pyproject.toml
pico_qpsk/data_processing/.devcontainer/: Dockerfile
pico_qpsk/src/: board_setup.rs  data_array.rs  error.rs  main.rs  packet.rs  pio_bytecode_gen.rs  pio_helpers.rs  serial_executor.rs  usb_serial.rs
